Fix schema serialization/deserialization
